Eliminate use of global service loader state
Use normal service loading and clean tests up a bit.

Change-Id: I9c5e09ee8e9cb0d0158ca8c1a82e2e244c7a6e60
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>